# GraphicsShadowEffect

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
config/: graphics_shadow_effect.rc
headers/: default_values.hpp  graphics_shadow_effect.hpp  main_window.hpp  painter_of_save_and_restore_transform.hpp  thickness.hpp  types_aliases.hpp  utilities.hpp
sources/: graphics_shadow_effect.cpp  main.cpp  main_window.cpp
